--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,40 +1,60 @@
 .login-box {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background-image: url('../../assets/img/bg.jpg');
   background-size: 100% 100%;
-  position: relative;
   .login-form {
-    width: 400px;
-    position: absolute;
-    top: 25%;
+    width: 600px;
+    position: fixed;
     left: 50%;
+    bottom: 80px;
     transform: translateX(-50%);
-    padding: 15px 25px;
-    background: rgba(0,0,0,.3);
-    h1 {
-      text-align: center;
-      color: #fff;
-      margin-bottom: 20px;
+    color: #fff;
+    text-align: center;
+    .input-wrap {
+      width: 240px;
+      height: 34px;
+      line-height: 34px;
+      border-radius: 17px;
+      display: inline-block;
+      overflow: hidden;
+      border: none;
+      input {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        padding: 0 20px;
+        border: none;
+        outline: none;
+        text-align: center;
+        cursor: pointer;
+        &::-webkit-input-placeholder {
+          opacity: .5;
+          animation: breath 2500ms infinite ease-in-out alternate;
+        }
+      }
     }
-    .login-form-action {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 5px;
-    }
-    .login-form-remember {
-      color: #fff;
-    }
-    .login-form-forgot {
-      float: right;
-      color: #fff;
-    }
-    .login-form-button {
+    .login-btn {
       width: 100%;
+      height: 34px;
+      line-height: 34px;
+      border-radius: 17px;
+      background: transparent;
+      border: none;
+      outline: none;
+      color: #fff;
+      opacity: .3;
+      cursor: pointer;
     }
-    .other-login-type {
-      text-align: center;
-    }
+  }
+}
+
+@keyframes breath {
+  0% {
+    opacity: .3;
+  }
+  100% {
+    opacity: .7;
   }
 }
